# arxiv-recommender

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
scripts/: build_index.py  download_snapshot.py  lint_markdown.py
src/arxiv_rec/: __init__.py
src/arxiv_rec/api/: server.py
src/arxiv_rec/data/: clean.py  ingest.py
src/arxiv_rec/models/: embed.py  index.py
tests/: test_placeholder.py
